--- build 1034

- Download progress spinner for content packs
- Many download fixes
- Huge update to Burundi pack

--- build 1033

- fix localization of content pack indexes
- fix Tor support for content pack downloads
- many small fixes in Burundi pack text
- Download bugfixes
- fix duplicate downloads issue
- update Burundi content pack

--- build 1032

- Content pack download bugfixes
- Translation updates
- Graphics updates

--- build 1031

- New Content Pack Download system

--- build 1030

- Multitrack audio / narration support
- Bugfixes

--- build 1029

- Fix: no thumbnails on home screen
- Fix: we shouldn’t cache username/password after storymaker logout
- Fix: Many crashes
- Allow content file download over Tor

--- build 1028

- Android 5 support!
- use Tor to download content if it is enabled

--- build 1026

- Thumbnails won't clutter system gallery or cause scrolling hiccups
- Reduce memory usage due to thumbnail improvements
- Fix for repeated incomplete content downloads
- Fix for order screen crashes

--- build 1025

- Fix: crash when publishing empty stories
- Narration UI fixes

--- build 1024

- New language: Kinyarwanda
- Fixes and refinements to narration
- Optimize memory usage

--- build 1021

- Improve audio thumbnail performance / design
- Bugfixes

--- build 1020

- Add French translation!
- New narration UI!
- Update translations
- Fix: weird spacing on tip cards
- Delete clips from clipcard
- Fix back button exiting app
- Keep screen on while narrating
- Pause playing videos when opening order/narration
- Fix: Scrolling from bottom of screen is tricky
- Fix: Preview player on review card doesn't update after editing order
- Fix: crash second time you try to record a narration
- Fix: Video Dimensions Incorrect in Playback
- More Bugfixes!

--- build 1019

- fix photo story export
- speed up home screen load a ton
- increase content download stability
- crash fixes

--- build 1018
