@@ -1,3 +1,10 @@
+--- build 1035
+
+- Fix: content pack table of contents out of order
+- Fix: double thum
+- Fix: Narration isn't saved unless added to first clip in a series
+- Fix: Clip Playback shows a double thumbnail
+
 --- build 1034
 
 - Download progress spinner for content packs
